practice of DOM manipulation and event listeners

--- a/Javascript-warmup/index.html
+++ b/Javascript-warmup/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Hi hello</h1>
-    <h1 class="title">Hi hello</h1>
-    <a href="dj">download now</a>
+    <!-- <h1 id="title"  title="title" class="random class">Sample code</h1> -->
+    <!-- <h1 class="title">Hi hello</h1>
+    <a href="dj">download now</a> -->
+    <!-- <h1>Ashish</h1> -->
+    <!-- <input type="text"> -->
+
+
+    <!-- <H1>Select your device</H1>
+    <select >
+        <option selected disabled>Choose option</option>
+        <option value="samsung">samsung</option>
+        <option value="oppo">oppo</option>
+        <option value="mi">xiomi</option>
+    </select> -->
+
+
+    <div id="main">
+        <!-- <h1>A</h1> -->
+         <div id="btn">Upload file</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
