--- a/Javascript-warmup/index.html
+++ b/Javascript-warmup/index.html
@@ -23,10 +23,26 @@
     </select> -->
 
 
+    <!-- <div id="main">
+        <h1>A</h1>
+         <input type="file" id="fileinp">
+         <div class="btn">Upload file</div>
+    </div> -->
+
     <div id="main">
-        <!-- <h1>A</h1> -->
-         <div id="btn">Upload file</div>
+        <form action="">
+            <input type="text" placeholder="name">
+            <input type="number" placeholder="number">
+            <input type="submit">
+        </form>
     </div>
+
+    <div class="card">
+        <h1 class="name"></h1>
+        
+    </div>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
